components/support/error/tests/macro_arguments.stderr
error: Expected #[handle_error(path::to::Error)]
  --> macro_arguments.rs:42:16
   |
42 | #[handle_error("Error")] // Quoted string instead of a path
   |                ^^^^^^^

error: Expected #[handle_error(path::to::Error)]
  --> macro_arguments.rs:47:16
   |
47 | #[handle_error(2)] // bad type.
   |                ^

error: custom attribute panicked
  --> macro_arguments.rs:52:1
   |
52 | #[handle_error] // No args.
   | ^^^^^^^^^^^^^^^
   |
   = help: message: called `Option::unwrap()` on a `None` value

error: custom attribute panicked
  --> macro_arguments.rs:57:1
   |
57 | #[handle_error()] // empty args.
   | ^^^^^^^^^^^^^^^^^
   |
   = help: message: called `Option::unwrap()` on a `None` value

error: Expected #[handle_error(path::to::Error)]
  --> macro_arguments.rs:62:17
   |
62 | #[handle_error(A, B)] // too many args.
   |                 ^

error: Expected #[handle_error(path::to::Error)]
  --> macro_arguments.rs:67:19
   |
67 | #[handle_error(Key="Value")] // unknown args.
   |                   ^

error[E0277]: the trait bound `String: std::error::Error` is not satisfied
  --> macro_arguments.rs:93:1
   |
93 | #[handle_error(Error2)] // Must implement `std::error::Error`
   | ^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::error::Error` is not implemented for `String`
   |
note: required by a bound in `convert_log_report_error`
  --> $WORKSPACE/components/support/error/src/handling.rs
   |
   | pub fn convert_log_report_error<IE, EE>(e: IE) -> EE
   |        ------------------------ required by a bound in this function
...
   |     EE: std::error::Error,
   |         ^^^^^^^^^^^^^^^^^ required by this bound in `convert_log_report_error`
   = note: this error originates in the attribute macro `handle_error` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `String: GetErrorHandling` is not satisfied
   --> macro_arguments.rs:112:1
    |
112 | #[handle_error(String)] // Must implement `std::error::Error`
    | ^^^^^^^^^^^^^^^^^^^^^^^ the trait `GetErrorHandling` is not implemented for `String`
    |
    = help: the following other types implement trait `GetErrorHandling`:
              Error
              Error2
note: required by a bound in `convert_log_report_error`
   --> $WORKSPACE/components/support/error/src/handling.rs
    |
    | pub fn convert_log_report_error<IE, EE>(e: IE) -> EE
    |        ------------------------ required by a bound in this function
    | where
    |     IE: GetErrorHandling<ExternalError = EE> + std::error::Error,
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `convert_log_report_error`
    = note: this error originates in the attribute macro `handle_error` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `String: std::error::Error` is not satisfied
   --> macro_arguments.rs:112:1
    |
112 | #[handle_error(String)] // Must implement `std::error::Error`
    | ^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::error::Error` is not implemented for `String`
    |
note: required by a bound in `convert_log_report_error`
   --> $WORKSPACE/components/support/error/src/handling.rs
    |
    | pub fn convert_log_report_error<IE, EE>(e: IE) -> EE
    |        ------------------------ required by a bound in this function
    | where
    |     IE: GetErrorHandling<ExternalError = EE> + std::error::Error,
    |                                                ^^^^^^^^^^^^^^^^^ required by this bound in `convert_log_report_error`
    = note: this error originates in the attribute macro `handle_error` (in Nightly builds, run with -Z macro-backtrace for more info)
